--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,21 @@
 // Specific CSS for your home-page
+.form-container{
+  background-color: white;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+  padding:25px;
+}
+
+.home-box{
+  height: calc(100vh - 66px); //100vh -66px is for the navbar
+  align-items: flex-end;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 0;
+}
+
+.typed-cursor {
+  display: none;
+}
