Make small changes to Venue show page

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -27,19 +27,19 @@
     </div>
 
     <div class="reviews">
-      <h3 class="mt-3 border-bottom">Reviews</h3>
-      <div class="home-info border-bottom">
-        <p class="mt-3"><% 5.times do %><i class="fas fa-star" style="color:#1BBC9A;"></i><% end %></p>
+      <h3 class="mt-3 ">Reviews</h3>
+      <div class="home-info">
+        <!-- <p class="mt-3"><% 5.times do %><i class="fas fa-star" style="color:#1BBC9A;"></i><% end %></p> -->
         <p class="mt-3"> Great restaurant</p>
       </div>
 
-      <div class="home-info border-bottom">
-        <p class="mt-3"><% 3.times do %><i class="fas fa-star" style="color:#1BBC9A;"></i><% end %></p>
+      <div class="home-info">
+        <!-- <p class="mt-3"><% 3.times do %><i class="fas fa-star" style="color:#1BBC9A;"></i><% end %></p> -->
         <p class="mt-3"> Food was great, but service was a little slow</p>
       </div>
 
-      <div class="home-info border-bottom">
-        <p class="mt-3"><% 5.times do %><i class="fas fa-star" style="color:#1BBC9A;"></i><% end %></p>
+      <div class="home-info">
+        <!-- <p class="mt-3"><% 5.times do %><i class="fas fa-star" style="color:#1BBC9A;"></i><% end %></p> -->
         <p class="mt-3"> Amazing staff and delicious food</p>
       </div>
       <br>
