--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -11,6 +11,7 @@
 <div class="container" style=" width: 95%; background-color: white; min-height:100vh; /*border: 2px solid red;*/ z-index: 1; margin-top: 55vh; border-radius: 10px; ">
 <!-- ADD BACK WHEN WE HAVE MORE INFO -->
   <!-- <h4 class="pt-2"><%#= @venues.first.category %></h4> -->
+  <h4 class="pt-2">Venues</h4>
 <% @venues.each do |venue| %>
 <!-- Each cards -->
 <div class="card-product mt-2">
