--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="actions d-flex justify-content-between">
       <a class="btn btn-flat" href="#">Book table</a>
-      <a class="btn btn-flat" href="#">Get there</a>
+      <a class="btn btn-flat" href="https://www.google.com/maps/place/ <%= @venue.address %>">Get there</a>
       <a class="btn btn-flat" href="#">Share</a>
     </div>
 
