--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -14,3 +14,13 @@
   text-align: center;
   font-family: 'Open Sans', sans-serif;
 }
+
+// .marker {
+//   background-size: cover;
+//   background-color: red;
+//   color:red;
+//   width: 50px;
+//   height: 50px;
+//   border-radius: 50%;
+//   cursor: pointer;
+// }
