--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -15,12 +15,12 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-// .marker {
-//   background-size: cover;
-//   background-color: red;
-//   color:red;
-//   width: 50px;
-//   height: 50px;
-//   border-radius: 50%;
-//   cursor: pointer;
-// }
+.marker {
+  background-size: cover;
+  background-color: #ED1C24;
+  color:#ED1C24;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
