link from index to show

--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -56,3 +56,14 @@
     font-size: 20px;
   }
 
+  .card-product-infos {
+
+    a {
+    text-decoration: none;
+    color: black;
+    }
+
+  }
+
+
+
