--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,8 +1,6 @@
 <div class="container">
   <div class="row">
 
-
-
 <div
   id="map"
   style="width: 100%;
@@ -12,8 +10,6 @@
   data-markers="<%= @markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 ></div>
-
-
 
 <div class="container card-design" id="transition">
   <div class="d-flex justify-content-between">
@@ -26,12 +22,11 @@
   </div>
   <!-- <p >Full screen</p> -->
   <% @venues.each do |venue| %>
-
     <!-- Each cards -->
     <div class="card-product mt-2">
       <img src="<%= venue.photo %>" />
       <div class="card-product-infos">
-        <h2><%= venue.name %></h2>
+        <h2><%= link_to venue.name, venue_path(venue) %></h2>
         <p><%= venue.address %></p>
         <p><i class="fas fa-star icon"></i> <%= venue.rating %> (<%= venue.review_count %>)</p>
       </div>
