check box now working

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -15,7 +15,8 @@
 <div class="container card-design" id="transition">
   <div class="d-flex justify-content-between">
     <div>
-      <h4 class="pt-2"><%= @venues.first.category %></h4>
+      <h4 class="pt-2">Venues</h4>
+      <!-- <h4 class="pt-2"><%#= @venues.first.category %></h4> -->
     </div>
     <div>
       <i class="fas fa-arrows-alt-v mt-3 mr-1 arrow-size" id= "arrow"></i>
