--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
           <%= f.input :location_2, label: "End Point" %>
         </div>
         <div class="form-group">
-          <%= f.input :category, as: :radio_buttons, collection: ["Restaurant", "Bar", "Coffeeshop"], wrapper: :vertical_collection_inline %>
+          <%= f.input :category, as: :check_boxes, collection: ["Restaurant", "Bar", "Coffeeshop"], wrapper: :vertical_collection_inline %>
         </div>
         <%= f.submit "Search venues", class: "btn btn-home btn-block" %>
       <% end %>
