--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,38 +1,39 @@
 <div class="container">
   <div class="row">
+    <div
+      id="map"
+      style="width: 100%;
 
-<div
-  id="map"
-  style="width: 100%;
+      height: 100vh; position: absolute; z-index: 1;"
 
-  height: 100vh; position: absolute; z-index: 1;"
+      data-markers="<%= @markers.to_json %>"
+      data-halfway="<%= @halfway %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+    ></div>
 
-  data-markers="<%= @markers.to_json %>"
-  data-halfway="<%= @halfway %>"
-  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-></div>
-
-<div class="container card-design" id="transition">
-  <div class="d-flex justify-content-between">
-    <div>
-      <h4 class="pt-2"><%= @venues.first.category %></h4>
-    </div>
-    <div>
-      <i class="fas fa-arrows-alt-v mt-3 mr-1 arrow-size" id= "arrow"></i>
+    <div class="container card-design" id="transition">
+      <div class="d-flex justify-content-between">
+        <div>
+          <!-- <h4 class="pt-2"><%#= @venues.first.category %></h4> -->
+        </div>
+        <div>
+          <i class="fas fa-arrows-alt-v mt-3 mr-1 arrow-size" id= "arrow"></i>
+        </div>
+      </div>
+      <!-- <p >Full screen</p> -->
+      <% @venues.each do |venue| %>
+        <!-- Each cards -->
+        <div class="card-product mt-2">
+          <img src="<%= venue.photo %>" />
+          <div class="card-product-infos">
+            <h2><%= link_to venue.name, venue_path(venue) %></h2>
+            <p><%= venue.address %></p>
+            <p>User one trip duration: <%=  @user_one_duration%></p>
+            <p>User two trip duration: <%=  @user_two_duration%></p>
+            <p><i class="fas fa-star icon"></i> <%= venue.rating %> (<%= venue.review_count %>)</p>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
-  <!-- <p >Full screen</p> -->
-  <% @venues.each do |venue| %>
-    <!-- Each cards -->
-    <div class="card-product mt-2">
-      <img src="<%= venue.photo %>" />
-      <div class="card-product-infos">
-        <h2><%= link_to venue.name, venue_path(venue) %></h2>
-        <p><%= venue.address %></p>
-        <p><i class="fas fa-star icon"></i> <%= venue.rating %> (<%= venue.review_count %>)</p>
-      </div>
-    </div>
-  <% end %>
-</div>
-
 </div>
