--- a/app/views/favourites/index.html.erb
+++ b/app/views/favourites/index.html.erb
@@ -5,7 +5,9 @@
   data-markers="<%= @markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 ></div>
-
+  <div style="z-index: 1;">
+    <a href="/#"><i class="fas fa-arrow-circle-left m-2 p-1" id="back"></i></a>
+  </div>
 <div class="container card-design" id="transition">
   <div class="d-flex justify-content-between">
     <div>
