--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,5 +1,8 @@
 <div class=" venue-container">
   <div class="title d-flex justify-content-between">
+    <div style="z-index: 1;">
+      <a href="/#"><i class="fas fa-arrow-circle-left p-1 " id="back"></i></a>
+    </div>
     <h2><%= @venue.name %></h2>
 
     <!-- finding the favourite in the DB for this user and this venue -->
@@ -14,7 +17,6 @@
         <i class="fas fa-heart"></i>
       <% end %>
     <% end %>
-
   </div>
 
   <img src="<%= @venue.photo %>" alt="" class="show-photo">
