--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="container">
   <div class="row">
     <div
@@ -21,6 +22,8 @@
         </div>
       </div>
       <!-- <p >Full screen</p> -->
+
+
       <% @venues.each do |venue| %>
         <!-- Each cards -->
         <div class="card-product mt-2">
@@ -28,8 +31,8 @@
           <div class="card-product-infos">
             <h2><%= link_to venue.name, venue_path(venue) %></h2>
             <p><%= venue.address %></p>
-            <p>User one trip duration: <%=  @user_one_duration%></p>
-            <p>User two trip duration: <%=  @user_two_duration%></p>
+            <p><strong>Trip duration info</strong>: <%=  venue.find_duration(params[:search][:location_1]) %> mins | <%=  venue.find_duration(params[:search][:location_2]) %> mins </p>
+            <p></p>
             <p><i class="fas fa-star icon"></i> <%= venue.rating %> (<%= venue.review_count %>)</p>
           </div>
         </div>
