--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,5 +1,5 @@
 <div class=" venue-container">
-  <div class="title d-flex">
+  <div class="title d-flex justify-content-between">
     <h2><%= @venue.name %></h2>
   </div>
 
