--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -29,6 +29,7 @@
       <img src="<%= venue.photo %>" />
       <div class="card-product-infos">
         <h2><%= link_to venue.name, venue_path(venue) %></h2>
+        <p><%= venue.category %></p>
         <p><%= venue.address %></p>
         <p><i class="fas fa-star icon"></i> <%= venue.rating %> (<%= venue.review_count %>)</p>
       </div>
