highliting of icon working/ issue with map.js

--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -52,30 +52,34 @@
   // /margin: 0 2.5vw;
 }
 
- .arrow-size {
-    font-size: 20px;
-  }
+.arrow-size {
+  font-size: 20px;
+}
 
-  .card-product-infos {
+.card-product-infos {
 
-    a {
-    text-decoration: none;
-    color: black;
-    }
+  a {
+  text-decoration: none;
+  color: black;
   }
+}
 
-  .active-cat {
-    background-color: #E3F6F5;
-  }
+.active-cat {
+  background-color: #E3F6F5;
+}
 
-  .cat_btn {
-    padding: 0; margin: 0;
-  }
+.cat_btn {
+  padding: 0; margin: 0;
+}
 
-  .sizing-box {
-    width: 100%;
-    margin-right: 0;
-    padding: 10px 0;
-  }
+.sizing-box {
+  width: 100%;
+  margin-right: 0;
+  padding: 10px 0;
+}
+
+.active-cat-icon {
+  color: red;
+}
 
 
