--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,17 +30,17 @@
             <!-- The three different buttons -->
             <div class="col-4 form-check form-check-inline cat_btn">
               <input class="form-check-input check_boxes required d-none" type="checkbox" value="Restaurant" name="search[category][]" id="search_category_restaurant">
-              <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_restaurant"><i class="fas fa-utensils"></i></label>
+              <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_restaurant"><i class="fas fa-utensils cat-icon"></i></label>
             </div>
 
             <div class="col-4 form-check form-check-inline border cat_btn">
               <input class="form-check-input check_boxes required d-none" type="checkbox" value="Bar" name="search[category][]" id="search_category_bar">
-              <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_bar"><i class="fas fa-glass-cheers"></i></label>
+              <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_bar"><i class="fas fa-glass-cheers cat-icon"></i></label>
             </div>
 
             <div class=" col-4 form-check form-check-inline border cat_btn">
               <input class="form-check-input check_boxes required d-none" type="checkbox" value="Coffeeshop" name="search[category][]" id="search_category_coffeeshop">
-              <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_coffeeshop"><i class="fas fa-coffee"></i></label>
+              <label class="form-check-label collection_check_boxes text-center sizing-box" for="search_category_coffeeshop"><i class="fas fa-coffee cat-icon"></i></label>
             </div>
           </div>
 
