--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -1,10 +1,15 @@
 .card-product {
   overflow: hidden;
-  height: 120px;
+  height: 150px;
   background: white;
   box-shadow: 0 0 4px rgba(0,0,0,0.1);
   display: flex;
   align-items: center;
+
+}
+
+.card-clicked {
+  border: solid #F8CF61;
 }
 
 .card-product img {
