home page design 80%, need to add text

--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -69,10 +69,6 @@
   }
 }
 
-.active-cat {
-  background-color: #E3F6F5;
-}
-
 .cat_btn {
   padding: 0; margin: 0;
 }
@@ -84,7 +80,11 @@
 }
 
 .active-cat-icon {
-  color: red;
+  color: #F36B7F !important;
+}
+
+.submit-btn-yell {
+  background-color: #F8CF61;
 }
 
 
