--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,20 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to favourites_path, class: "navbar-brand" do %>
+    <i class="fas fa-home"></i>
+    <% end %>
+    <%= link_to favourites_path, class: "navbar-brand" do %>
     <i class="far fa-heart"></i>
     <% end %>
+    <%= link_to favourites_path, class: "navbar-brand" do %>
+    <i class="far fa-envelope"></i>
+    <% end %>
+     <%= link_to favourites_path, class: "navbar-brand" do %>
+    <i class="fas fa-user"></i>
+    <% end %>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+ <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+  </button> -->
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
