--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -5,7 +5,7 @@
       id="map"
       style="width: 100%;
 
-      height: 100vh; position: absolute; z-index: 1;"
+      height: 75vh; position: absolute; z-index: 1;"
 
       data-markers="<%= @markers.to_json %>"
       data-halfway="<%= @halfway %>"
@@ -19,28 +19,41 @@
 
 
     <div class="container card-design" id="transition">
-      <div class="d-flex justify-content-between">
-        <div>
-          <h4 class="pt-2">Venues</h4>
-        </div>
-        <div>
-          <i class="fas fa-arrows-alt-v mt-3 mr-1 arrow-size" id= "arrow"></i>
-        </div>
+      <div class="d-flex justify-content-between pl-2 pr-2 pt-3">
+          <h4 class=""><strong>Venues</strong></h4>
+          <i class="fas fa-arrows-alt-v arrow-size" id= "arrow"></i>
       </div>
+        <!-- <div>
+          <h4 class="mt-2 pt-2 ml-4"><strong>Venues</strong></h4>
+        </div>
+        <div>
+          <i class="fas fa-arrows-alt-v mt-3 mr-4 arrow-size" id= "arrow"></i>
+        </div>
+      </div> -->
       <!-- <p >Full screen</p> -->
 
 
       <% @venues.each do |venue| %>
         <!-- Each cards -->
-        <div class="card-product mt-2">
-          <img src="<%= venue.photo %>" />
+        <div class="card-product">
+          <img class ="photo"src="<%= venue.photo %>" />
           <div class="card-product-infos">
-            <h2><%= link_to venue.name, venue_path(venue) %></h2>
-            <p><%= venue.address %></p>
-            <p><strong>Trip duration info</strong>: <%=  venue.find_duration(params[:search][:location_1]) %> mins | <%=  venue.find_duration(params[:search][:location_2]) %> mins </p>
-            <p></p>
-            <p><i class="fas fa-star icon"></i> <%= venue.rating %> (<%= venue.review_count %>)</p>
-            <span data-coordinates="<%= [ venue.longitude, venue.latitude ].to_json %>" class="mapTrigger" data-venue="<%= venue.id %>">view on map</span>
+            <div class="d-flex justify-content-between">
+              <h5><%= link_to venue.name, venue_path(venue)%></h5>
+              <i class="far fa-heart heart"></i>
+            </div>
+            <div class="d-flex justify-content-between align-items-baseline">
+              <div>
+                <i class="fas fa-map-marker-alt marker-on-card"></i>
+                <span data-coordinates="<%= [ venue.longitude, venue.latitude ].to_json %>" class="mapTrigger" data-venue="<%= venue.id %>">View on map</span>
+              </div>
+              <span class=""><i class="far fa-star"></i> <%= venue.rating %> (<%= venue.review_count %>)</span>
+            </div>
+            <div class="d-flex schema-time">
+              <p><%= venue.find_duration(params[:search][:location_1]) %> mins </p>
+              <p> <%= venue.find_duration(params[:search][:location_2]) %> mins</p>
+            </div>
+            <img class="distance" src="<%= asset_path('half_marker.png') %>" alt="">
           </div>
         </div>
       <% end %>
