--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<!-- <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to favourites_path, class: "navbar-brand" do %>
     <i class="far fa-heart"></i>
     <% end %>
@@ -33,3 +33,4 @@
     </ul>
   </div>
 </div>
+ -->
