--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,73 +1,77 @@
-<div class=" venue-container">
-  <div class="title d-flex justify-content-between">
-    <div style="z-index: 1;">
-      <a href="/#"><i class="fas fa-arrow-circle-left p-1 " id="back"></i></a>
-    </div>
-    <h2><%= @venue.name %></h2>
+<div class="container">
+  <div class="row">
+    <div
+      id="map"
+      style="width: 100%;
 
-    <!-- finding the favourite in the DB for this user and this venue -->
-    <% favourite_for_this_venue = current_user.favourites.find_by(venue: @venue) %>
+      height: 100vh; position: absolute; z-index: 1;"
 
-    <% if favourite_for_this_venue.nil? %>
-      <%= link_to venue_favourites_path(@venue), method: :post do  %>
-        <i class="far fa-heart"></i>
-      <% end %>
-    <% else %>
-      <%= link_to favourite_path(favourite_for_this_venue), method: :delete do  %>
-        <i class="fas fa-heart"></i>
-      <% end %>
-    <% end %>
-  </div>
-
-  <img src="<%= @venue.photo %>" alt="" class="show-photo">
-
-  <div class="container">
-    <div class="actions d-flex justify-content-between">
-      <a class="btn btn-flat" href="#">Book table</a>
-      <a class="btn btn-flat" href="https://www.google.com/maps/place/ <%= @venue.address %>">Get there</a>
-      <a class="btn btn-flat"  href="#" id="share">Share</a>
-      <!-- <input value="<%= request.url %>"  id="copyinput"  > -->
-    </div>
-    <!-- style="opacity: 0;height:0;width:0;" -->
+      data-markers="<%= @markers.to_json %>"
+      data-halfway="<%= @halfway %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+    ></div>
 
 
 
-    <div class="venue-info">
-      <div class="venue">
-        <p><i class="fas fa-map-marked-alt icon"></i> <%= @venue.address %></p>
-      </div>
+    <div class="container venue-box-design" id="show-transition">
+        <div class="title d-flex justify-content-between">
+         <!--  <div style="z-index: 1;">
+            <a href="/#"><i class="fas fa-arrow-circle-left p-1 " id="back"></i></a>
+          </div> -->
+          <h4 class="venue-title"><%= @venue.name %></h4>
+          <!-- <p class="venue-title"><i class="far fa-heart"></i></p> -->
+           <% favourite_for_this_venue = current_user.favourites.find_by(venue: @venue) %>
+            <div>
+          <i class="fas fa-arrows-alt-v mt-3 mr-1 arrow-size show-full-screen" id= "show-arrow"></i>
+        </div>
 
-      <div class="venue">
-        <p><i class="fas fa-phone icon"></i> <%= @venue.phone %></p>
-      </div>
+            <% if favourite_for_this_venue.nil? %>
+              <%= link_to venue_favourites_path(@venue), method: :post do  %>
+                <p class="venue-title"><i class="far fa-heart"></i></p>
+              <% end %>
+            <% else %>
+              <%= link_to favourite_path(favourite_for_this_venue), method: :delete do  %>
+                <p class="venue-title"><i class="fas fa-heart"></i></p>
+              <% end %>
+            <% end %>
+        </div>
+        <div >
+          <img src="<%= @venue.photo %>" alt="" class="show-photo">
+        </div>
+        <div class="half-marker">
+          <div class="times d-flex">
+            <p class="first-duration">32 mins</p>
+            <p class="second-duration">28 mins</p>
+          </div>
+          <img src="<%= asset_path('half_marker.png') %>" alt="">
+        </div>
+         <div class="actions d-flex justify-content-around m-2">
+          <div class="icon-text d-flex flex-column align-items-center">
+            <a class="icons walk" href="https://www.google.com/maps/place/ <%= @venue.address %>"><i class="fas fa-walking"></i></a>
+            <p>Let's go</p>
+          </div>
+          <div class="icon-text d-flex flex-column align-items-center">
+            <a class="icons calendar" href="#"><i class="far fa-calendar-alt"></i></a>
+            <p>Book</p>
+          </div>
+          <div class="icon-text d-flex flex-column align-items-center">
+            <a class="icons share"  href="#" id="share"><i class="fas fa-share-alt"></i></a>
+            <p>Share</p>
+          </div>
+        </div>
+        <div class="venue-infos">
+          <div class="d-flex align-items-center">
+            <p class="pink-icon"><i class="fas fa-map-marker"></i></p>
+            <p><%= @venue.address %></p>
+          </div>
+          <div class="d-flex align-items-center">
+            <p class="pink-icon"><i class="fas fa-phone"></i></p>
+            <p><%= @venue.phone %></p>
+          </div>
+          <div class="d-flex align-items-center">
+            <p class="pink-icon"><i class="fas fa-star"></i></p>
+            <p><%= @venue.rating %></p>
+          </div>
+        </div>
 
-      <div class="venue">
-        <p><i class="fas fa-star icon"></i> <%= @venue.rating %> (<%= @venue.review_count %>)</p>
-      </div>
-    </div>
-
-    <div class="reviews">
-      <h3 class="mt-3 ">Reviews</h3>
-      <div class="home-info">
-        <!-- <p class="mt-3"><% 5.times do %><i class="fas fa-star" style="color:#1BBC9A;"></i><% end %></p> -->
-        <p class="mt-3"> Great restaurant</p>
-      </div>
-
-      <div class="home-info">
-        <!-- <p class="mt-3"><% 3.times do %><i class="fas fa-star" style="color:#1BBC9A;"></i><% end %></p> -->
-        <p class="mt-3"> Food was great, but service was a little slow</p>
-      </div>
-
-      <div class="home-info">
-        <!-- <p class="mt-3"><% 5.times do %><i class="fas fa-star" style="color:#1BBC9A;"></i><% end %></p> -->
-        <p class="mt-3"> Amazing staff and delicious food</p>
-      </div>
-      <br>
-
-    </div>
-
-    </div>
-
-  </div>
-</div>
 
