--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,3 +20,25 @@
 .typed-cursor {
   display: none;
 }
+
+.loading-page{
+  background-color: #FFFFFF;
+  z-index: 100;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  background-image: url("https://cdn.dribbble.com/users/3460475/screenshots/6553355/371903340_location_marker_400x300.gif");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  // height: 50vh;
+  padding-top: 173%;
+
+
+}
+
+.loading-content{
+}
+
+
+
+// https://cdn.dribbble.com/users/747448/screenshots/2876287/littlepin_spinner.gif
