--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row home-box">
     <div style="width: 100%;height: 100%; padding-top: 190px;">
-      <img style="width: 100%" src="<%= asset_path('home.png')%>"
+      <img style="width: 100%" src="<%= asset_path('home.png')%>">
     </div>
 
 
